Update enged footer.

--- a/layouts/partials/components/footer.html
+++ b/layouts/partials/components/footer.html
@@ -9,7 +9,7 @@
               <div class="section-form-inner">
               <!-- Begin Mailchimp Signup Form -->
                 <div id="mc_embed_signup">
-                  <form action="https://section.us19.list-manage.com/subscribe/post?u=a52bc1065d452c0b915716c32&amp;id=9ac38a3a06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <form action="https://section.us19.list-manage.com/subscribe/post-json?u=a52bc1065d452c0b915716c32&amp;id=9ac38a3a06&c=?" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                       <div class="mc-field-group">
                         <input type="email" value="" aria-label="Input your email" name="EMAIL" placeholder="Enter your email..." class="required email" id="mce-EMAIL">
@@ -22,6 +22,7 @@
                       <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                     </div>
                   </form>
+                  <div class="message"></div>
                 </div>
                 <!--End mc_embed_signup-->
               </div>
@@ -60,22 +61,20 @@
       <div class="section-footer-inner-col">
         <h4 class="title-6 text-link xs-mb-20">Company</h4>
         <ul class="list-unstyled">
-          <li class="xs-mb-20"><a href="/about" class="text-16 link-footer decoration-none">About</a></li>
-          <li class="xs-mb-20"><a href="/about/careers" class="text-16 link-footer decoration-none">Careers</a></li>
-          <li class="xs-mb-20"><a href="/legal-stuff" class="text-16 link-footer decoration-none">Legals</a></li>
+          <li class="xs-mb-20"><a href="/about/" class="text-16 link-footer decoration-none">About</a></li>
+          <li class="xs-mb-20"><a href="/about/careers/" class="text-16 link-footer decoration-none">Careers</a><span class="text-11" style="background-color: #00a86b; color: white; margin-left: 10px; padding: 3px; font-weight: 600;">WE'RE HIRING</span></li>
+          <li class="xs-mb-20"><a href="/legal-stuff/" class="text-16 link-footer decoration-none">Legals</a></li>
         </ul>
       </div>
 
       <div class="section-footer-inner-col">
         <h4 class="title-6 text-link xs-mb-20">Resources</h4>
         <ul class="list-unstyled">
-          <li class="xs-mb-20"><a href="/blog" class="text-16 link-footer decoration-none">Blog</a></li>
-          <li class="xs-mb-20"><a href="/blog/tag/case-study" class="text-16 link-footer decoration-none">Case Studies</a></li>
-          <li class="xs-mb-20"><a href="/edge-compute-content-resources" class="text-16 link-footer decoration-none">Content Library</a></li>
-          <li class="xs-mb-20"><a href="/solution-briefs" class="text-16 link-footer decoration-none">Solution Briefs</a></li>
-          <li class="xs-mb-20"><a href="/solutions-partners" class="text-16 link-footer decoration-none">Partners</a></li>
-          <li class="xs-mb-20"><a href="/changelog" class="text-16 link-footer decoration-none">Changelog</a></li>
-          <li class="xs-mb-20"><a href="https://www.section.io/pricing/" class="text-16 link-footer decoration-none">Pricing</a></li>
+          <li class="xs-mb-20"><a href="/blog/" class="text-16 link-footer decoration-none">Blog</a></li>
+          <li class="xs-mb-20"><a href="/edge-compute-content-resources/" class="text-16 link-footer decoration-none">Edge Content Library</a></li>
+          <li class="xs-mb-20"><a href="/solution-briefs/" class="text-16 link-footer decoration-none">Solution Briefs</a></li>
+          <li class="xs-mb-20"><a href="/engineering-education/" class="text-16 link-footer decoration-none">Engineering Education</a></li>
+          <li class="xs-mb-20"><a href="/pricing/" class="text-16 link-footer decoration-none">Pricing</a></li>
         </ul>
       </div>
 
@@ -85,11 +84,14 @@
           <li class="xs-mb-20"><a href="/docs/" class="text-16 link-footer decoration-none">Docs</a></li>
           <li class="xs-mb-20"><a href="https://sectionio-community.slack.com/" class="text-16 link-footer decoration-none" title="(opens new window)">Community Slack</a></li>
           <li class="xs-mb-20"><a href="https://support.section.io/hc/en-us" class="text-16 link-footer decoration-none">Help & Support</a></li>
+          <li class="xs-mb-20"><a href="/release-notes/" class="text-16 link-footer decoration-none">Release Notes</a></li>
           <li class="xs-mb-20"><a href="https://status.section.io/" class="text-16 link-footer decoration-none">Platform Status</a></li>
+
         </ul>
       </div>
       <div class="section-footer-inner-col">
-        <div class="section-footer-inner-col-social list-flex">
+        <a class="button button-nav button-white button-outline" href="/contact-us/">Contact Us</a>
+        <div class="section-footer-inner-col-social list-flex xs-mt-30">
           <a class="section-footer-inner-col-social-twitter" href="https://twitter.com/sectionio" Title="Section on Twitter"></a>
           <a class="section-footer-inner-col-social-linkedin" href="https://www.linkedin.com/company/section_io/" Title="Section on LinkedIn"></a>
           <a class="section-footer-inner-col-social-github" href="https://github.com/section-io/" Title="Section on Github"></a>
@@ -127,7 +129,7 @@
                 </g>
               </svg>
               </a></li>
-              <li class="text-13 text-light-gray section-footer-bottom-inner-wrap-left-copy">© 2021 Section</li>
+              <li class="text-13 text-light-gray section-footer-bottom-inner-wrap-left-copy">© 2022 Section</li>
             </ul>
           </div>
           <div class="section-footer-bottom-inner-wrap-right flex align-center">
