Create Projects Section on Author page.

--- a/assets/scss/components/_all.scss
+++ b/assets/scss/components/_all.scss
@@ -1,5 +1,6 @@
 @import "authors";
 @import "author-blocks";
+@import "author-projects";
 @import "blog-listing";
 @import "card";
 @import "content-blocks";
