Decrease lineheight on projects titles.

--- a/assets/scss/components/_author-projects.scss
+++ b/assets/scss/components/_author-projects.scss
@@ -29,6 +29,7 @@
 
           .title {
             margin-bottom: 15px;
+            line-height: 25px !important;
             
             a {
               color: $text-color;
