--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -122,7 +122,7 @@
 {{ with .Params.projects }}
   <section class="projects-section">
     <div class="section-container projects-listing-container">
-      <h2 class="title-3 text-blue xs-pb-20">Projects</h2>
+      <h2 class="title-3 text-blue xs-pb-20">Featured Projects</h2>
       <div class="projects">
         {{ range . }}
           <div class="project">
