Increase table header font.

--- a/layouts/partials/engineering-education/trending-articles.html
+++ b/layouts/partials/engineering-education/trending-articles.html
@@ -43,8 +43,8 @@
           <thead>
               <tr>
                   <th></th>
-                  <th class="article-title-header text-16-tall">Article Title</th>
-                  <th class="page-views-header text-16-tall"># Page Views</th>
+                  <th class="article-title-header text-18-medium">Article Title</th>
+                  <th class="page-views-header text-18-medium"># Page Views</th>
               </tr>
           </thead>
           <tbody id="trending30DaysTableBody" class="table-body">
@@ -95,8 +95,8 @@
           <thead>
               <tr>
                   <th></th>
-                  <th class="article-title-header text-16-tall">Article Title</th>
-                  <th class="page-views-header text-16-tall"># Page Views</th>
+                  <th class="article-title-header text-18-medium">Article Title</th>
+                  <th class="page-views-header text-18-medium"># Page Views</th>
               </tr>
           </thead>
           <tbody id="trendingAllTimeTableBody" class="table-body">
