Fix mobile styling.

--- a/assets/scss/components/_trending-articles.scss
+++ b/assets/scss/components/_trending-articles.scss
@@ -164,4 +164,20 @@
       }
     }
   }
+
+  @include mq($to: 550px) {
+    .content-margins {
+      .tab-body {
+        .tabcontent {
+          .table-body {
+            .rank-col,
+            .article-col .content .title,
+            .page-views-col {
+              font-size: 15px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
