Re-add changes from other branch.

--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -74,6 +74,8 @@
 
   {{ partial "engineering-education/testimonials-slider" (dict "component" . "context" . "site" .Site) }}
 
+  {{ partial "engineering-education/trending-articles" (dict "component" . "context" . "site" .Site) }}
+  
   <div class="section enged-listing-search flex align-center xs-pb-20 xs-pt-40 sm-pb-300 sm-pt-60">
     <div class="section-container enged-listing-search-container xs-mb-20">
       <div id="educationSearch"></div>
