--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -63,6 +63,8 @@
 
           {{ $articleUrlsList = delimit $articleUrlsList ", "}}
 
+          <h4>Author Insights</h4>
+
           <div class="insights-section">
             <div class="insight total-num-articles" data-before="Total Number of Articles Written">
               <img src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/total-articles-icon.png" alt="Total Number of Articles Icon" />
@@ -77,6 +79,20 @@
               <p id="totalPageViews">0</p>
             </div>
           </div>
+
+          {{ with .Params.badges }}
+            <div class="author-badges">
+              <h4>EngEd Community Badges</h4>
+              <div class="badges">
+                {{/*  {{ range . }}  */}}
+                  {{/*  {{ $badgeTitle := .}}  */}}
+                  {{ partial "engineering-education/badges-display-list.html" (dict "studentBadges" . "site" $.Site) }}
+                  {{/*  <img src="/images/badges/{{ .Site.Data.badgesData.badges.$badgeTitle }}" alt=""/>  */}}
+                  {{/*  {{ .Site.Data.globals.enged_cta.url }}  */}}
+                {{/*  {{ end }}  */}}
+              </div>
+            </div>
+          {{ end }}
           
           {{ with .Params.skills }} 
             <div class="author-skills">
