Make error messages the same.

--- a/layouts/partials/engineering-education/trending-articles.html
+++ b/layouts/partials/engineering-education/trending-articles.html
@@ -79,7 +79,7 @@
 
               {{ end }}
             {{ else }}
-              <p>No data available. Request failed.</p>
+              <div>No content available. Request failed.</div>
             {{ end }}
           </tbody>
         </table>
